fix: collapse style

--- a/src/views/Collapse/collapse.module.css
+++ b/src/views/Collapse/collapse.module.css
@@ -3,7 +3,8 @@
 }
 
 .panel {
-  padding: 16px 8px;
+  margin-bottom: 8px;
+  padding: 8px;
   white-space: pre-line;
   background-color: var(--color-container-bg);
 }
